New: Optimise code